maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:30: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to (Boolean)
    ecritMessage(Ttraite(positionBuggleX + positionBuggleY))
    ^